--- a/index.html
+++ b/index.html
@@ -10,20 +10,35 @@
 <body>
   <main>
     <div class="container">
+    <!-- Home Section -->
       <div>
         <h3>Home</h3>
-        <div class="score"></div>
-        <button>+1</button>
-        <button>+2</button>
-        <button>+3</button>
+        <div class="scoreboard-home">
+          <h2 class= "score" id="home-score">0</h2>
+        </div>
+        <div class="buttons">
+          <button class="plusone-btn" id="home-score-btn-1">+1</button>
+          <button class="plusone-btn" id="home-score-btn-2">+2</button>
+          <button class="plusone-btn" id="home-score-btn-3">+3</button>
+          <button class="reset-btn" id="reset-home-score"s>Reset</button>
+        </div>
       </div>
+    <!--- Home end --->
+
+    <!-- Guest Section -->
       <div>
         <h3>Guest</h3>
-        <div class="score"></div>
-        <button>+1</button>
-        <button>+2</button>
-        <button>+3</button>
+        <div class="scoreboard-guest">
+          <h2 class= "score" id="guest-score">0</h2>
+        </div>
+        <div class="buttons">
+          <button class="plusone-btn" id="guest-score-btn-1">+1</button>
+          <button class="plusone-btn" id="guest-score-btn-2">+2</button>
+          <button class="plusone-btn" id="guest-score-btn-3">+3</button>
+          <button class="reset-btn" id="reset-guest-score"s>Reset</button>
+        </div>
       </div>
+    <!-- Guest End -->
     </div>
   </main>
 
